<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<com.markupartist.android.widget.ActionBar
		android:id="@+id/actionbar" style="@style/ActionBar" />
	<LinearLayout android:padding="10dp" android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:gravity="center_horizontal">

		<TextView android:text="@string/rate_label" style="@style/TextView" />
		<Button android:text="@string/rate_action" android:onClick="rate"
			style="@style/Button" android:layout_marginBottom="10dp" />

		<TextView android:text="@string/mail_label" style="@style/TextView"
			android:layout_marginTop="10dp"></TextView>
		<Button android:text="@string/mail_action" android:onClick="mail"
			style="@style/Button" android:layout_marginBottom="10dp" />

		<TextView android:text="@string/web_label" style="@style/TextView"
			android:layout_marginTop="10dp"></TextView>
		<Button android:text="@string/web_action" android:onClick="web"
			style="@style/Button" android:layout_marginBottom="10dp" />
		<TextView android:text="@string/created_by" style="@style/TextView" />
		<TextView android:text="@string/destil" style="@style/TextView"
			android:textStyle="bold" />
		<TextView android:text="@string/based_on" style="@style/TextView" />
		<TextView android:text="@string/liberty" style="@style/TextView"
			android:textStyle="bold" />
	</LinearLayout>
</LinearLayout>